# cook-cuda

./: CMakeLists.txt  README.md  vcpkg.json
include/sample/: utils.cuh
src/: main.cu
src/sample/: hello_world.cu  hello_world.cuh  memory_manage.cu  memory_manage.cuh  sample_01.cu
src/utils/: utils.cu  utils.cuh
